Added service reference

--- a/FootballConsoleApp/App.config
+++ b/FootballConsoleApp/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="SportsdataSoap" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://www.openligadb.de/Webservices/Sportsdata.asmx"
+                binding="basicHttpBinding" bindingConfiguration="SportsdataSoap"
+                contract="ServiceReference1.SportsdataSoap" name="SportsdataSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
