Added Contact class

--- a/FootballConsoleApp/FootballConsoleApp.csproj
+++ b/FootballConsoleApp/FootballConsoleApp.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactSOAP.cs" />
     <Compile Include="MainProgram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
